--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -29,3 +29,15 @@ body {
   color: hsl(186deg 27% 39%);
   font-size: 14px;
 }
+
+.tc-custom-tip {
+  width: 7rem;
+  height: 2rem;
+  margin: 0.5rem 0;
+  border-radius: 7px;
+  border: none;
+  text-align: right;
+  font-size: 27px;
+  color: hsl(172deg 14% 41%);
+  background-color: hsl(185deg 41% 84%);
+}
