--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -34,10 +34,14 @@ body {
   width: 7rem;
   height: 2rem;
   margin: 0.5rem 0;
+  padding: 0.5rem;
   border-radius: 7px;
   border: none;
-  text-align: right;
   font-size: 27px;
   color: hsl(172deg 14% 41%);
   background-color: hsl(185deg 41% 84%);
+}
+
+.tc-custom-tip::placeholder {
+  text-align: center;
 }
