--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
+  height: 100vh;
   font-family: "Space Mono", monospace;
   font-size: 24px;
 }
