Responsive css for Summary Card

--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,17 @@
 
 html,
 body {
+  min-height: 100%;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
   font-family: "Space Mono", monospace;
   font-size: 24px;
+}
+
+body {
+  background-size: 100%;
 }
 
 code {
