--- a/src/index.css
+++ b/src/index.css
@@ -6,20 +6,10 @@
 
 html,
 body {
-  min-height: 100%;
   margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
+  padding: 0;
   font-family: "Space Mono", monospace;
   font-size: 24px;
-}
-
-body {
-  background-size: 100%;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
