Added images, basic layout, imported fonts

--- a/src/styles/tip-calculator/tip-calculator-styles.css
+++ b/src/styles/tip-calculator/tip-calculator-styles.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+.tip-calculator {
+  font-family: 'Space Mono', monospace;
+}
+
 .tc-label {
   display: block;
   font-size: 16px;
