--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .furniture-desc {
+    @apply text-grayDark text-xxs leading-normal;
+  }
+}
+
 *,
 *::before,
 *::after {
