--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer components {
   .furniture-desc {
-    @apply text-grayDark text-xxs leading-normal;
+    @apply text-grayDark text-xxs leading-slight;
   }
 }
 
