--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
   .furniture-desc {
     @apply text-grayDark text-xxs leading-slight;
   }
+  .grey-out-children {
+    @apply absolute top-0 left-0 z-10 h-full w-full opacity-50 pointer-events-none;
+  }
 }
 
 *,
@@ -21,4 +24,11 @@ body {
   font-size: 24px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html,
+body,
+#root,
+.App {
+  min-height: 100vh;
 }
